--- a/registro.html
+++ b/registro.html
@@ -24,34 +24,34 @@
                             <h3>Nuevo usuario</h3>
                             <span>Completa la informacion y envia tus datos.</span>
                         </div>
-                        <div name = "nombre">
+                        <div id = "nombre">
                             <label for="txt_name">Nombre</label>
-                            <input id="txt_name" name ="txt_name" type="text" maxlength="100" minlength="10" required>
+                            <input id="txt_name" name ="txt_name" type="text" maxlength="100" minlength="10" placeholder="" required>
                             <span>Tu nombre completo</span>
                         </div>
-                        <div name = "correo">
+                        <div id = "correo">
                             <label for="txt_mail">Email</label>
-                            <input id="txt_mail" name ="txt_mail" type="email" maxlength="100" minlength="5" required>
+                            <input id="txt_mail" name ="txt_mail" type="email" maxlength="100" minlength="5" placeholder="" required>
                             <span>Tu correo para recibir notificaciones</span>
                         </div>
-                        <div name = "dob">
+                        <div id = "dob">
                             <label for="txt_dob">Fecha de nacimiento</label>
                             <input type="date" id = "txt_dob" name = "txt_dob" required>
                             <span>Tu fecha de nacimiento</span>
                         </div>
-                        <div name = "contrasenia">
+                        <div id = "contrasenia">
                             <label for="txt_password">Contraseña</label>
-                            <input type="txt_password" name = "txt_password" type = "password" required>
+                            <input id="txt_password" name = "txt_password" type = "password" placeholder="" required>
                             <span>Tu contrasenia aqui</span>
                         </div>
-                        <div name = "pseudonimo">
+                        <div id = "pseudonimo">
                             <label for="txt_nick_name">Pseudónimo</label>
-                            <input type="txt_nick_name" name = "txt_nick_name" type = "text" required pattern="[a-zA-Z]{3,10}-{0-9}{2,10}">
+                            <input id="txt_nick_name" name = "txt_nick_name" type = "text" placeholder="" required pattern="[a-zA-Z]{3,10}-[0-9]{2,10}">
                             <span>Escribe tu nickname aqui</span>
                         </div>
-                        <div name = estado>
+                        <div id = estado>
                             <label for="rad_statatus">Estado</label>
-                            <div name = "radios_estados" class="radios_estados">
+                            <div id = "radios_estados" class="radios_estados">
                                 <input type="radio" value="soltero" id="rad_single" name ="rad_statatus">
                                 <label for="rad_single">Soltero</label>
                                 <input type="radio" value="Casado" id = "rad_marry" name = "rad_statatus">
@@ -60,7 +60,7 @@
                                 <label for="rad_complicated">Es complicado</label>
                             </div>
                         </div>
-                        <div name = "cuenta" >
+                        <div id = "cuenta" >
                             <label for="sel_account">Cuenta</label>
                             <select name="sel_account" id="sel_account" required    >
                                 <option value="">Selecciona una opcion</option>
@@ -70,12 +70,12 @@
                             </select>
                             <span>Selecciona un tipo de cuenta para desbloquear caracteristics</span>
                         </div>
-                        <div name = "tyc">
+                        <div id = "tyc">
                             <label for="chk_tyc">Aceptar terminos y condiciones</label>
                             <input type="checkbox" required id = "chk_tyc" name = "chk_tyc" value="aceptado">
                             <span>Debes de aceptar los terminos y condiciones.</span>
                         </div>
-                        <div name = "options" class="options">
+                        <div id = "options" class="options">
                             <button type="submit">Registrar</button>
                             <button type="reset">Cancelar</button>
                         </div>
